fix: async loaders

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,12 @@
     "strictFunctionTypes": true,
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
-    "preserveConstEnums": true
+    "preserveConstEnums": true,
+    "paths": {
+      "~/*": [
+        "./src/*"
+      ]
+    }
   },
   "include": [
     "src"
