--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6.6.0",
-    "sort-by": "1.2.0"
+    "sort-by": "1.2.0",
+    "zod": "3.20.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
