--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "server": "json-server --watch db.json --port 5000",
     "preview": "vite preview"
   },
   "dependencies": {
     "@tanstack/react-query": "4.20.4",
     "match-sorter": "6.3.1",
+    "query-string": "8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6.6.0",
@@ -22,6 +24,7 @@
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "10.4.13",
+    "json-server": "0.17.1",
     "postcss": "8.4.20",
     "prettier": "2.8.1",
     "tailwindcss": "3.2.4",
