--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@floating-ui/react": "0.18.0",
+    "@floating-ui/react-dom": "1.2.1",
+    "@preact/signals-react": "1.2.2",
     "@tanstack/react-query": "4.20.4",
+    "fuzzy-search": "3.2.1",
     "query-string": "8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,6 +22,7 @@
     "zod": "3.20.2"
   },
   "devDependencies": {
+    "@types/fuzzy-search": "2.1.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
