--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@floating-ui/react": "0.18.0",
     "@floating-ui/react-dom": "1.2.1",
     "@preact/signals-react": "1.2.2",
+    "@radix-ui/react-icons": "1.1.1",
     "@tanstack/react-query": "4.20.4",
     "fuzzy-search": "3.2.1",
     "query-string": "8.1.0",
