--- a/package.json
+++ b/package.json
@@ -10,22 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@floating-ui/react": "0.18.0",
+    "@floating-ui/react": "0.18.1",
     "@floating-ui/react-dom": "1.2.1",
     "@preact/signals-react": "1.2.2",
     "@radix-ui/react-icons": "1.1.1",
     "@tanstack/react-query": "4.20.4",
+    "@use-gesture/react": "^10.2.24",
     "fuzzy-search": "3.2.1",
+    "lodash": "^4.17.21",
     "query-string": "8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6.6.0",
+    "react-window": "1.8.8",
     "zod": "3.20.2"
   },
   "devDependencies": {
     "@types/fuzzy-search": "2.1.2",
+    "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-window": "^1.8.5",
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "10.4.13",
     "json-server": "0.17.1",
@@ -35,6 +40,7 @@
     "ts-toolbelt": "9.6.0",
     "typescript": "^4.9.4",
     "vite": "^4.0.0",
-    "vitest": "^0.26.2"
+    "vitest": "^0.26.2",
+    "{react-window}": "link:@types/{react-window}"
   }
 }
